canvis i mes canvis de ultima hora

--- a/ikarus_base/ikarus_base/templates/ayuda.html
+++ b/ikarus_base/ikarus_base/templates/ayuda.html
@@ -9,9 +9,8 @@
 	<img src="{{STATIC_URL}}images/mobil.png" class="img-mobil" />
 	</div>
 	<div class="content-text-manual">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porttitor ultricies quam at lacinia. Mauris et massa ornare odio porttitor hendrerit. Sed urna nulla, feugiat vitae dui eget, tempus blandit massa. Nam commodo dapibus leo, vel imperdiet velit malesuada vitae. Etiam nec faucibus mauris. Vivamus nulla lacus, convallis in justo a, varius interdum libero. Nulla dapibus dolor sit amet quam pulvinar, eu sollicitudin ante eleifend. In hac habitasse platea dictumst. Nulla aliquet, libero nec posuere ultrices, ante nisi ultricies nisi, malesuada lacinia leo felis vitae mauris. Curabitur ut turpis libero. Maecenas pretium, enim nec ornare tristique, nisl neque placerat quam, vitae dictum purus nunc eu tortor.</p>
-
-		<p>Phasellus a condimentum diam. Vivamus at rutrum massa, sit amet imperdiet nulla. Vivamus feugiat orci id orci euismod, in pharetra arcu vestibulum. Phasellus at sem ullamcorper, vulputate lorem ut, elementum orci. Nullam sit amet aliquam nulla, nec sagittis purus. Cras velit lorem, lobortis vel blandit eu, scelerisque in arcu. In eget sollicitudin odio, nec imperdiet mi. Morbi congue placerat suscipit. Sed rhoncus ultrices turpis vel semper. Praesent ipsum nulla, vestibulum in urna a, condimentum semper urna. Aenean eget libero sed arcu scelerisque pretium non quis nunc. Proin eget leo ut justo tincidunt blandit convallis in augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vitae viverra elit.</p>
+	<p>Aquí trobaràs una petita guia per aprendre a distingir els diferents elements de l’aplicació mòbil.<br />
+	El primer que veurem al encendre l’aplicació es la pantalla de registre.<br /><br /></p>
 	</div>
 	<a href="{{STATIC_URL}}documents/manual-usuari-app.pdf" target="_blank">Manual d'Usuari App</a>
 </div>
@@ -20,10 +19,9 @@
 	<img src="{{STATIC_URL}}images/ordinador.png" class="img-pc"/>
 	</div>
 	<div class="content-text-manual">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porttitor ultricies quam at lacinia. Mauris et massa ornare odio porttitor hendrerit. Sed urna nulla, feugiat vitae dui eget, tempus blandit massa. Nam commodo dapibus leo, vel imperdiet velit malesuada vitae. Etiam nec faucibus mauris. Vivamus nulla lacus, convallis in justo a, varius interdum libero. Nulla dapibus dolor sit amet quam pulvinar, eu sollicitudin ante eleifend. In hac habitasse platea dictumst. Nulla aliquet, libero nec posuere ultrices, ante nisi ultricies nisi, malesuada lacinia leo felis vitae mauris. Curabitur ut turpis libero. Maecenas pretium, enim nec ornare tristique, nisl neque placerat quam, vitae dictum purus nunc eu tortor.</p>
-
-		<p>Phasellus a condimentum diam. Vivamus at rutrum massa, sit amet imperdiet nulla. Vivamus feugiat orci id orci euismod, in pharetra arcu vestibulum. Phasellus at sem ullamcorper, vulputate lorem ut, elementum orci. Nullam sit amet aliquam nulla, nec sagittis purus. Cras velit lorem, lobortis vel blandit eu, scelerisque in arcu. In eget sollicitudin odio, nec imperdiet mi. Morbi congue placerat suscipit. Sed rhoncus ultrices turpis vel semper. Praesent ipsum nulla, vestibulum in urna a, condimentum semper urna. Aenean eget libero sed arcu scelerisque pretium non quis nunc. Proin eget leo ut justo tincidunt blandit convallis in augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam vitae viverra elit.</p>
-	</div>
+	<p>Aquí trobaràs tot el que et faci falta per navegar per a la nostra web. <br />
+	Només entrant a la web es pot apreciar la simplicitat de la web com també la navegació força explicita, que ens permetrà accedir a la diferents pàgines del projecte.</p>
+		</div>
 	<a href="{{STATIC_URL}}documents/manual-usuari-web.pdf" target="_blank">Manual d'Usuari Web</a>
 </div>
 {% endblock %}
