--- a/ikarus_base/ikarus_base/templates/home.html
+++ b/ikarus_base/ikarus_base/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div id="slider-wrapper">
 	<div class="inner-wrapper">
-		<input checked type="radio" name="slide" class="control" id="Slide1"/>
+		<input checked="checked" type="radio" name="slide" class="control" id="Slide1"/>
 		<label for="Slide1" id="s1"></label>
 		<input type="radio" name="slide" class="control" id="Slide2"/>
 		<label for="Slide2" id="s2"></label>
@@ -12,10 +12,10 @@
 		<input type="radio" name="slide" class="control" id="Slide4"/>
 		<label for="Slide4" id="s4"></label>
 		<div class="overflow-wrapper">
-			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_2.jpg"/></a>
-			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_3.jpg"/></a>
-			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_4.jpg"/></a>
-			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_1.jpg"/></a>
+			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_2.jpg" alt="banner"/></a>
+			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_3.jpg" alt="banner"/></a>
+			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_4.jpg" alt="banner"/></a>
+			<a class="slide" href=""><img src="{{STATIC_URL}}images/banner_1.jpg" alt="banner"/></a>
 		</div>
 	</div>
 </div>
