--- a/ikarus_base/ikarus_base/templates/404.html
+++ b/ikarus_base/ikarus_base/templates/404.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-
+{% block title %}Error 404{% endblock %}
 {% block content %}
 
 {% if form.errors %}
 {% endif %}
-<h3>EROOR!</h3>
-<h4>Pagina buscada no existeix!</h4>
+<h3>ERROR!</h3>
+<h4>La pàgina que busques no existeix!</h4>
 
 {% endblock %}
